--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id" data-theme="light">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3009440011249963"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kaidah Mantik100  — Arab + Terjemahan Indonesia</title>
@@ -1035,3 +1037,4 @@ ID: ${r.exId}`;
 
 </body>
 </html>
+
